Finish CSS for version 0.5

--- a/dev/sass/layouts/_320.sass
+++ b/dev/sass/layouts/_320.sass
@@ -5,9 +5,6 @@ body
 
 $mobilegutter: 10px
 
-.slides li img
-  max-height: 300px
-
 #wrap
   width: 100%
   padding: $mobilegutter $mobilegutter 40px $mobilegutter
@@ -64,19 +61,28 @@ $mobilegutter: 10px
   +media($desktop)
     @include outer-container
 
-.post
-  @extend %content-box
+// SLIDER
+.slides li img
+  max-height: 300px
 
 .featured-image
-  padding-bottom: 0
+  img
+    max-height: 300px
+    display: block
+    margin: 0 auto
+  padding: 0
   overflow: hidden
   .flex-control-nav //FlexSlider
     visibility: hidden
     +media($tablet)
       visibility: visible
 
+// END SLIDER
+
+.post
+  @extend %content-box
+
 .post-content
-  border-left: 3px solid red
   padding: 0 20px
   +clearfix
   +media($tablet)
@@ -127,17 +133,16 @@ $mobilegutter: 10px
 .post-navigation
   position: relative
   height: 60px
-  margin: 20px 0 10px 0
+  margin: 40px 0 10px 0
   +media($tablet)
-    margin: 30px 0 20px 0
+    margin: 50px 0 20px 0
   +media($tablet2)
-    margin: 50px 0 40px 0
+    margin: 70px 0 40px 0
   +media($desktop)
     margin-bottom: 50px
     @include outer-container
 
 // pagination
-
 .pagination
   position: relative
   margin-top: 25px
@@ -167,11 +172,17 @@ $mobilegutter: 10px
   border-radius: 4px
   color: #ddd !important
   &:hover, &:active, &:focus
+    +transition(all .5s)
+    +box-shadow(0px 0px 10px rgba(#000,.5))
     background: #000
-    color: #fff
+    color: #fff !important
   &.inactive
     background: #ccc
     color: #eee !important
+    &:hover
+      +box-shadow(none)
+
+// standard posts pagination
 .page-previous
   @extend %control-buttons
   top: 10px
@@ -184,6 +195,26 @@ $mobilegutter: 10px
   right: 0
   +media($desktop)
     top: 15px
+
+// posts navigation
+.post-previous
+  @extend %control-buttons
+  right: 0
+.post-next
+  @extend %control-buttons
+  left: 0
+
+// comments navigation
+.comment-previous
+  @extend %control-buttons
+  left: 0
+  &.inactive
+    color: #fff !important
+.comment-next
+  @extend %control-buttons
+  right: 0
+  &.inactive
+    color: #fff !important
 
 
 // single post & comments
@@ -212,6 +243,7 @@ $mobilegutter: 10px
 
 .comment-list
   list-style-type: none
+  padding-bottom: 10px
   p
     font-size: 13px
   article figure
@@ -231,6 +263,7 @@ $mobilegutter: 10px
       padding: 4px 8px 3px 8px
       margin-right: 5px
       border-radius: 3px
+      text-transform: uppercase
       font-size: 12px
   li
     margin-bottom: 20px
@@ -243,13 +276,34 @@ $mobilegutter: 10px
         margin: 20px 0 20px 20px
 
 .awaiting-moderation
-  margin-top: 20px
+  margin-top: 25px
   font-style: italic
   color: #bbb
 
 .comment-navigation
-  background: red
   position: relative
   display: block
-  height: 40px
+  height: 30px
   +clearfix
+
+#respond
+  padding-top: 20px
+  margin-top: 20px
+  label
+    display: block
+    font-size: 12px
+    +media($tablet)
+      font-size: 15px
+  input, textarea
+    width: 100%
+    border-radius: 0
+    border: 0
+    background: #f0f0f0
+    padding: 12px 16px
+    color: #8c8c8c
+  input[type="submit"]
+    background: #333
+    color: #eee
+    &:hover, &:active, &:focus
+      background: #000
+      color: #fff
