--- a/dev/sass/modules/_typography.sass
+++ b/dev/sass/modules/_typography.sass
@@ -1,7 +1,6 @@
 // google fonts
 @import url(http://fonts.googleapis.com/css?family=Merriweather:300,400,700,900)
-//@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700)
-@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700)
+//@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700)
 
 // define typographic variables
 $body-font-size      : 14px !default
@@ -30,6 +29,9 @@ h1,h2,h3,h4,h5,h6
   line-height: $golden-ratio + em
   color: #5a5a5a
 
+h3
+  font-size: 18px
+
 // paragraphs
 p
   font-size: 14px
@@ -55,4 +57,4 @@ pre
   color: #787878
   word-wrap: normal
   +media($tablet)
-    font-size: 16px
+    font-size: 14px
